--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 
 
   <div class="c">
-       <h1>cricMatches</h1>
-       <h2>International cricket matches currently underway</h2>
+      <header>
+        <h1>cricMatches</h1>
+        <h2>International cricket matches currently underway</h2>
+      </header>
+
 
       <div id="matchList"></div>
 
-
+    <footer>
+      <p>API from <a href="http://www.cricapi.com">http://www.cricapi.com</a>, lightweight css framework: <a href="https://ajusa.github.io/lit/">lit</a>, jQuery</p>
+    </footer>
    </div>
 
 
