--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <div id="matchList"></div>
 
-    <footer>
+    <!-- <footer>
       <p>API from <a href="http://www.cricapi.com">http://www.cricapi.com</a>, lightweight css framework: <a href="https://ajusa.github.io/lit/">lit</a>, jQuery</p>
-    </footer>
+    </footer> -->
    </div>
 
 
