--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="c">
       <header>
         <h1>cricMatches</h1>
-        <h2>International cricket matches currently underway</h2>
+        <h4>Current International Matches</h4>
       </header>
 
 
