--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" href="css/lit.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Cricket</title>
 </head>
 <body>
 
 
   <div class="c">
       <header>
-        <h1>cricMatches</h1>
         <h4>Current International Matches</h4>
       </header>
 
