--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/jquery.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="css/lit.css"> -->
+  <link rel="stylesheet" href="css/lit.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Cricket</title>
 </head>
