--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="c">
       <header>
-        <h4>Current International Matches3</h4>
+        <h4>Current International Matches</h4>
       </header>
 
 
