--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
    </div>
 
+   <div>
+     <p>On 2018/02/10 the cricAPI service is switching to being a paid service, and this page won't work.</p>
+   </div>
+
 
 </body>
 </html>
