--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="matchList"></div>
 
       <div>
-        <p>On 2018/02/10 the cricAPI service is switching to being a paid service, and this page won't work.</p>
+        <p>On 2018/02/10 the cricAPI service is switching to being a paid service, and this page might stop working.</p>
       </div>
    </div>
 
